unpackaged/main/default/objects/Wizard_Flow_Values__mdt/Wizard_Flow_Values__mdt.object-meta.xml
<CustomObject>
    <label>Wizard Flow Values</label>
    <pluralLabel>Wizard Flow Values</pluralLabel>
</CustomObject>