unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/Account_Servicing_Principal_Review_RT__c.field-meta.xml
<CustomField>
    <fullName>Account_Servicing_Principal_Review_RT__c</fullName>
    <label>Record Type - Case - Acct Serv Principal</label>
    <length>18</length>
    <type>Text</type>
</CustomField>