unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/Assetmark__c.field-meta.xml
<CustomField>
    <fullName>Assetmark__c</fullName>
    <label>Custodian - 1330 - Assetmark</label>
    <length>18</length>
    <type>Text</type>
</CustomField>