unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/Authorized_Signer_Reciprocal_Role__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Signer_Reciprocal_Role__c</fullName>
    <label>Reciprocal Role - Authorized Signer</label>
    <length>18</length>
    <type>Text</type>
</CustomField>