unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/Beneficial_Owner_Reciprocal_Role__c.field-meta.xml
<CustomField>
    <fullName>Beneficial_Owner_Reciprocal_Role__c</fullName>
    <label>Reciprocal Role - Beneficial Owner</label>
    <length>18</length>
    <type>Text</type>
</CustomField>