unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/Brinker__c.field-meta.xml
<CustomField>
    <fullName>Brinker__c</fullName>
    <label>Custodian - 1330 - Brinker</label>
    <length>18</length>
    <type>Text</type>
</CustomField>