unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/Business_Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Account_Record_Type__c</fullName>
    <label>Business Account Record Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>