unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/Case_Acc_Servicing_Principal_Review_RT__c.field-meta.xml
<CustomField>
    <fullName>Case_Acc_Servicing_Principal_Review_RT__c</fullName>
    <label>Case Acc Servicing Principal Review RT</label>
    <length>18</length>
    <type>Text</type>
</CustomField>