unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/Case_Account_Opening_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Account_Opening_Record_Type__c</fullName>
    <label>Record Type - Case - Account Opening</label>
    <length>18</length>
    <type>Text</type>
</CustomField>