unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/Case_Ad_Hoc_Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Ad_Hoc_Record_Type_Id__c</fullName>
    <label>Case Ad Hoc Record Type Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>