unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/Case_Advertising_Review_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Advertising_Review_Record_Type__c</fullName>
    <label>Case Advertising Review Record Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>