unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/Case_Source_of_Funds_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Source_of_Funds_Record_Type__c</fullName>
    <label>Case Source of Funds Record Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>