unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/Community_National_Bank__c.field-meta.xml
<CustomField>
    <fullName>Community_National_Bank__c</fullName>
    <label>Custodian - 1330 - Community Nat&#39;l Bank</label>
    <length>18</length>
    <type>Text</type>
</CustomField>