unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/Compliance_Queue__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Queue__c</fullName>
    <label>Queue - Compliance</label>
    <length>18</length>
    <type>Text</type>
</CustomField>