unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/Compliance_Task_Approval_Perm_Set__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Task_Approval_Perm_Set__c</fullName>
    <label>Compliance Task Approval Perm Set</label>
    <length>18</length>
    <type>Text</type>
</CustomField>