unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/DST__c.field-meta.xml
<CustomField>
    <fullName>DST__c</fullName>
    <label>Custodian - 1330 - DST</label>
    <length>18</length>
    <type>Text</type>
</CustomField>