unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/Fidelity_2__c.field-meta.xml
<CustomField>
    <fullName>Fidelity_2__c</fullName>
    <label>Custodian - 1330 - Fidelity 2</label>
    <length>18</length>
    <type>Text</type>
</CustomField>