unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/Fidelity__c.field-meta.xml
<CustomField>
    <fullName>Fidelity__c</fullName>
    <label>Custodian - 1330 - Fidelity</label>
    <length>18</length>
    <type>Text</type>
</CustomField>