unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/Fidelity_Key__c.field-meta.xml
<CustomField>
    <fullName>Fidelity_Key__c</fullName>
    <label>Custodian - 1330 - Fidelity-Key</label>
    <length>18</length>
    <type>Text</type>
</CustomField>