unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/Fund_Direct__c.field-meta.xml
<CustomField>
    <fullName>Fund_Direct__c</fullName>
    <label>Custodian - 1330 - Fund Direct</label>
    <length>18</length>
    <type>Text</type>
</CustomField>