unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/Household_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Household_Record_Type__c</fullName>
    <label>Record Type - Account - Household</label>
    <length>18</length>
    <type>Text</type>
</CustomField>