unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/Jackson_National_Life__c.field-meta.xml
<CustomField>
    <fullName>Jackson_National_Life__c</fullName>
    <label>Custodian - 1330 - Jackson National Life</label>
    <length>18</length>
    <type>Text</type>
</CustomField>