unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/Navigate_to_Send_Documents_URL__c.field-meta.xml
<CustomField>
    <fullName>Navigate_to_Send_Documents_URL__c</fullName>
    <label>URL - Navigate to Send Docs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>