unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/Operations_Queue__c.field-meta.xml
<CustomField>
    <fullName>Operations_Queue__c</fullName>
    <label>Queue - Operations</label>
    <length>18</length>
    <type>Text</type>
</CustomField>