unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/Opportunity_New_Money_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_New_Money_Record_Type__c</fullName>
    <label>Opportunity New Money Record Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>