unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/Pacific_Life__c.field-meta.xml
<CustomField>
    <fullName>Pacific_Life__c</fullName>
    <label>Custodian - 1330 - Pacific Life</label>
    <length>18</length>
    <type>Text</type>
</CustomField>