unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/Person_Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Person_Account_Record_Type__c</fullName>
    <label>Record Type - Account - Person</label>
    <length>18</length>
    <type>Text</type>
</CustomField>