unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/Prospect_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Record_ID__c</fullName>
    <label>Record Type - Account - Prospect</label>
    <length>18</length>
    <type>Text</type>
</CustomField>