unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/Prospect_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Record_Type__c</fullName>
    <label>Prospect Record Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>