unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/RBCDain__c.field-meta.xml
<CustomField>
    <fullName>RBCDain__c</fullName>
    <label>Custodian - 1330 - RBCDain</label>
    <length>18</length>
    <type>Text</type>
</CustomField>