unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/Reciprocal_Role_Name_Trustee__c.field-meta.xml
<CustomField>
    <fullName>Reciprocal_Role_Name_Trustee__c</fullName>
    <label>Reciprocal Role Name - Trustee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>