unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/Record_Type_Diversify_Related_Person__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Diversify_Related_Person__c</fullName>
    <label>Record Type - Diversify Related Person</label>
    <length>18</length>
    <type>Text</type>
</CustomField>