unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/Salesforce_URL__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_URL__c</fullName>
    <label>URL - Salesforce</label>
    <length>255</length>
    <type>Text</type>
</CustomField>