unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/Schwab__c.field-meta.xml
<CustomField>
    <fullName>Schwab__c</fullName>
    <label>Custodian - 1330 - Schwab</label>
    <length>18</length>
    <type>Text</type>
</CustomField>