unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/Schwab_Cipolla__c.field-meta.xml
<CustomField>
    <fullName>Schwab_Cipolla__c</fullName>
    <label>Custodian - 1330 - Schwab-Cipolla</label>
    <length>18</length>
    <type>Text</type>
</CustomField>