unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/Schwab_TDA__c.field-meta.xml
<CustomField>
    <fullName>Schwab_TDA__c</fullName>
    <label>Custodian - 1330 - Schwab (TDA)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>