unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/SEI__c.field-meta.xml
<CustomField>
    <fullName>SEI__c</fullName>
    <label>Custodian - 1330 - SEI</label>
    <length>18</length>
    <type>Text</type>
</CustomField>