unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/TD_Ameritrade_hist__c.field-meta.xml
<CustomField>
    <fullName>TD_Ameritrade_hist__c</fullName>
    <label>Custodian - 1330 - TD Ameritrade-hist</label>
    <length>18</length>
    <type>Text</type>
</CustomField>