unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/Trust_Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Trust_Account_Record_Type__c</fullName>
    <label>Trust Account Record Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>