unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/Trustee_Reciprocal_Role__c.field-meta.xml
<CustomField>
    <fullName>Trustee_Reciprocal_Role__c</fullName>
    <label>Reciprocal Role - Trustee</label>
    <length>18</length>
    <type>Text</type>
</CustomField>