unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/URL_List_View_3rd_Party_Administrato__c.field-meta.xml
<CustomField>
    <fullName>URL_List_View_3rd_Party_Administrato__c</fullName>
    <label>URL - List View - 3rd Party Administrato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>