unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/URL_List_View_All_Financial_Accounts__c.field-meta.xml
<CustomField>
    <fullName>URL_List_View_All_Financial_Accounts__c</fullName>
    <label>URL - List View - All Financial Accounts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>