unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/URL_List_View_AltSellServiceAll__c.field-meta.xml
<CustomField>
    <fullName>URL_List_View_AltSellServiceAll__c</fullName>
    <label>URL - List View - AltSellServiceAll</label>
    <type>Url</type>
</CustomField>