unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/URL_List_View_AltSellServiceNone__c.field-meta.xml
<CustomField>
    <fullName>URL_List_View_AltSellServiceNone__c</fullName>
    <label>URL - List View - AltSellServiceNone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>