unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/URL_List_View_AltServiceAll__c.field-meta.xml
<CustomField>
    <fullName>URL_List_View_AltServiceAll__c</fullName>
    <label>URL - List View - AltServiceAll</label>
    <type>Url</type>
</CustomField>