unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/URL_List_View_Outside_Managers__c.field-meta.xml
<CustomField>
    <fullName>URL_List_View_Outside_Managers__c</fullName>
    <label>URL - List View - Outside Managers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>