unpackaged/main/default/objects/Wizard_Flow_Values__mdt/fields/URL_List_View_VLI_Sell_Service__c.field-meta.xml
<CustomField>
    <fullName>URL_List_View_VLI_Sell_Service__c</fullName>
    <label>URL - List View - VLI Sell/Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>